# selene-intro

./: pyproject.toml
api/: helpers.py
selene_intro/common/: x.py
selene_intro/common/xpath/: x.py
selene_intro/common/xpath/dsl/: __init__.py  predicate.py  selector.py
selene_intro/dsl/: __init__.py  its.py  x.py
tests/: test_google.py  test_selene_intro.py  test_todomvc.py
tests/todomvc/css_version/: test_task_management.py
tests/todomvc/full_selene_version/: test_task_management.py
tests/todomvc/xpath_dsl_version/: test_task_management.py
tests/todomvc/xpath_version/: test_task_management.py
