[tool.poetry]
name = "selene-intro"
version = "0.1.0"
description = ""
authors = ["ozorninanton <azornin92@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
selene = {version = "2.0.0rc9", allow-prereleases = true}

[tool.poetry.dev-dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
